--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 var rank = "Scout"
 var points = 0
 var troop = prompt("Hello! Welcome to Scouting Adventures! This is a game where you can vurtually expeirience the thrills of scouting! First of all, what troop are you going to join?","Type in your troop number here!");
+console.log(rank, points, troop);
 for (var i = 0; i < 1;) {
 do {
 if (isNaN(troop) == true) {
