--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ switch (points) {
    <h5>This is the place where you can review your entire life of Scouts! This is where you can go on camp-outs and take classes! Doing those will earn you Scout points, and the more points you earn the higher your rank!</h5>
    <p id="rankdis" onclick="func()">Click here to see your rank!</p>
    <p id="point" onclick="func2()">Click here to see your points!</p>
-   <input type="button" value="Hike" onclick="hike"/>
+   <input type="button" value="Hike" onclick="hike()"/>
    <input type="button" value="Classes" onclick=""/>
 </div>
 <script>
