--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ switch (points) {
    <input type="button" value="Classes" onclick=""/>
 </div>
 <script>
-function func2(){
-  document.getElementById("point").innerHTML = "You have " + points + " points!";
+var func2 = function (){
+  document.getElementById("point").innnerHTML = "You have " + points + " points!";
 };
 function func() {
   document.getElementById("rankdis").innerHTML = "Your rank is " + rank + "!";
