--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ switch (points) {
    <h3>Welcome to your Scout Dashboard!</h3>
    <h5>This is the place where you can review your entire life of Scouts! This is where you can go on camp-outs and take classes! Doing those will earn you Scout points, and the more points you earn the higher your rank!</h5>
    <p id="rankdis" onclick="func()">Click here to see your rank!</p>
-   <p id="point" onclick="func2(points)">Click here to see your points!</p>
+   <p id="point">Click here to see your points!</p>
    <input type="button" value="Hike" onclick="hike()"/>
    <input type="button" value="Classes" onclick=""/>
 </div>
 <script>
-var func2 = function (p){
-  document.getElementById("point").innnerHTML = "You have " + p + " points!";
+document.getElementById("point").onclick = function(){
+  document.getElementById("point").innerHTML = "You have " + points + " points!";
 };
 function func() {
   document.getElementById("rankdis").innerHTML = "Your rank is " + rank + "!";
