Added div back in
I forgot that the CSS needs the div!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Scouting Adventures</title>
 </head>
 <body>
+<div id="header">
 <script>
 var rank = "Scout"
 var points = 0
@@ -94,5 +95,6 @@ function hike() {
     }
   };
 </script>
+</div>
 </body>
 </html>
