--- a/index.html
+++ b/index.html
@@ -46,12 +46,43 @@ switch (points) {
       rank = "Eagle"
     break;
 };
-document.getElementById("point").onclick = function(){
+function func2() {
   document.getElementById("point").innerHTML = "You have " + points + " points!";
 };
 function func() {
   document.getElementById("rankdis").innerHTML = "Your rank is " + rank + "!";
 };
+function hike() {
+  var camping = confirm("Are you ready to go on a hike?");
+  if (camping == true) {
+    for (var i = 0; i < 1;) {
+    var hiking = prompt("Where do you want to hike?: Forest, Mountain, Grand Canyon, or Death Valley");
+    switch (hiking) {
+      case Forest || forest:
+        points = points + 5;
+        window.alert("Oh look, a deer! For hiking here you get 5 points! You now have a total of " + points + " points!");
+        i++
+        break;
+      case Mountain || mountain:
+        points = points + 10;
+        window.alert("You're on top of the world! For hiking here you get 10 points! You now have a total of " + points + " points!");
+        i++
+        break;
+      case Grand Canyon || grand canyon:
+        points = points + 15;
+        window.alert("What a view! For hiking here you get 15 points! You now have a total of " + points + " points!");
+        i++
+        break;
+      case Death Valley || death valley:
+        points = points + 20;
+        window.alert("Wow, hot choice! For hiking here, you get 20 points! You now have a total of " + points + " points!");
+        i++
+        break;
+      default:
+        window.alert("Sorry, we don't know where that is. Please check your spelling!");
+    }
+    }
+  };
 </script>
    <h3>Welcome to your Scout Dashboard!</h3>
    <h5>This is the place where you can review your entire life of Scouts! This is where you can go on camp-outs and take classes! Doing those will earn you Scout points, and the more points you earn the higher your rank!</h5>
