--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@ function hike() {
 var hiking = confirm("Are you ready to hike?");
 if (hiking = true){
   var lochike = prompt("Where do you want to hike? Your options are Grand Canyon, Forest, Mountain, or Death Valley").toLowerCase()
-  switch (lochike)
+  switch (lochike){
     case ("grand canyon"):
         points = points + 15;
         window.alert("What a view! You have earned 15 points for hiking here! You now have " + points + " points!");
         break;
+     }
     } 
   };
 </script>
