--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ if (hiking = true){
         points = points + 5;
         window.alert("Oh look, a rabbit! For hiking here you have earned 5 points! You now have " + points + " points!");
       break;
-    case ("mountains" || "mountain"):
+    case ("mountain"):
         points = points + 10;
         window.alert("You're on top of the world! You have earned 10 points for hiking here! You now have " + points + " points!");
       break;
