--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="icon" href="http://www.iconarchive.com/download/i66332/thegirltyler/brand-camp/Camp-Fire-Stories.ico">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <title>Scouting Adventures</title>
 </head>
